[tool.poetry]
name = "keylogger"
version = "1.0.0"
description = "Un keylogger qui enregistre les touches du clavier et génère une heatmap interactive basée sur le nombre d'appuis."
authors = ["Votre Nom <votre.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pynput = "^1.7.6"
matplotlib = "^3.5.0"
tk = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
